# sltable

./: LICENSE  Makefile  README.md  pyproject.toml  tox.ini
src/sltable/: __init__.py  item.py  table.py
src/sltable/util/: __init__.py  colour.py
tests/: test_table.py
